# grub-theme

./: .editorconfig  Cargo.toml  README.md  rustfmt.toml
.github/workflow/: cargo-test.yml
.github/workflows/: cargo-build.yml  cargo-doc-pages.yml  cargo-lint.yml  cargo-test.yml  cargo.yml
examples/: README.md  pff2.rs  theme_txt.rs
src/: args.rs  lib.rs  main.rs  pff2.rs  theme_txt.rs
src/parser/: pff2.rs  theme_txt.rs
src/render/: pff2.rs
