[package]
name = "theme-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
nom = "7.1.3"
thiserror = "1.0.56"

[dev-dependencies]
test-case = "3.3.1"
anyhow = "1.0.79"
